--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,21 @@
-
-<h1> {{ message }} </h1>
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to the best News Review website </title>
+        {% endif %}
+    </head>
+    <body>
+        <!-- Popular news section  -->
+        <h3> Popular News/h3>
+         <ul>
+            {% for popular_news in popular %}
+                <li>{{ popular_news.title}}</li>
+            {% endfor %}
+        </ul>
+    </body>
+</html>
 
